<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joint_trajectory_publisher_gui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="naoki.takahashi060@gmail.com">Naoki Takahashi</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <build_depend>ament_cmake_auto</build_depend>
  <build_depend>generate_parameter_library</build_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdfdom</depend>
  <depend>Qt6</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
